# ncbf-simultaneous-synthesis-and-verification

./: .gitignore  CARs.py  Car.py  DataModule.py  InvertedPendulum.py  MyNeuralNetwork.py  MyNeuralNetwork_with_OptNet.py  MyPendulum.py  README.md  Transformer.py  ValueFunctionNeuralNetwork.py  analyze_test_result.py  analyze_training_result.py  analyze_training_statistics.py  car1_experiment.py  compute_jacobian.py  conjunction_function.py  control_affine_system.py  draw_CBF_shape.py  draw_epoch_time.py  draw_reward_training_ip.py  draw_training_trajectory.py  dynamic_system_instances.py  experiment.py  inverted_pendulum1_experiment.py  inverted_pendulum_callback.py  pyproject.toml  readme.md  setup.cfg  setup.py  system.py  tensorboard_data_analyze.py  test.py  test_inverted_pendulum.py  test_model.py  train_inverted_pendulum.py  train_model.py
RA_result/: extraOuts.mat  extraOuts_new.mat  hVS0_XData.pkl  hVS0_YData.pkl  hVS0_ZData.pkl  hVS_ZData.pkl
RA_result/LST_0.01/: violation_x_list.npy
RA_result/LST_0.02/: extraOuts.mat  violation_x_list.npy
RA_result/LST_0.05/: draw.py  extraOuts.mat  violation_x_list.npy
RA_result/LST_0.2/: draw.py  extraOuts.mat  violation_x_list.npy  violation_x_list_old.npy  violation_x_list_old2.npy
safe_rl_cbf/Analysis/: Plotter.py  analyze_LST_result.py  analyze_training_statistics.py  compare_guide.py  compare_nn_architecture.py  (+14 more)
test/: MyNeuralNetwork_sin.py  MyNeuralNetwork_with_OptNet.py  OptNet_test.py  ValueFunctionNeuralNetwork.py  backup.py  compute_jacobian.py  cvx_test.py  lqr_controller.py  test_autobound.py
(+155 files in other folders)
